Problam wos fixed

--- a/yandexmapkitsample/src/main/res/layout/sample.xml
+++ b/yandexmapkitsample/src/main/res/layout/sample.xml
@@ -5,10 +5,15 @@
 
 	<ru.yandex.yandexmapkit.MapView
         android:id="@+id/map"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:apiKey="1234567890"
-        android:layout_weight="1"
-    />
+        android:layout_width="match_parent"
+        android:layout_height="453dp"
+        android:apiKey="1234567890" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Refresh"
+            android:id="@+id/button" />
 </LinearLayout>
 
